fix: enable text wrap in code editors in order to fix invisble text

--- a/automad/src/client/admin/styles/form/codeflask.less
+++ b/automad/src/client/admin/styles/form/codeflask.less
@@ -72,6 +72,7 @@
 		&__textarea,
 		&__pre {
 			padding: @padding;
+			text-wrap: wrap;
 		}
 
 		&__textarea,
